# KumaQtTest

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
src/: CMakeLists.txt  KumaGLWidget.cpp  KumaGLWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
